[package]
name = "bbscope"
version = "0.0.6"
edition = "2021"
license = "MIT"
description = "BBCode to HTML with scoping rules, auto-close tags, highly extensible"
repository = "https://github.com/randomouscrap98/bbscope-rust"
readme = "README.md"
keywords = ["bbcode","html","parse","scope","markup"]
categories = ["parsing","text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.0", default-features = false, features = ["std"] }
html-escape = "0.2.12"
pretty_assertions = { version = "1.3.0", optional = true }
onestop = { version = "0.0.1", optional = true }  # My dumb profiling library

[features]
# default = ["bigtest"] # Enable this so the IDE doesn't interrupt your coding for those two cfg-conditional tests
perf = ["regex/perf"] # Enable perfomance enhancements (just regex for now)
profiling = ["dep:onestop"]
bigtest = ["dep:pretty_assertions"]
